codama-macros/tests/codama_attribute/values_nodes/sysvar/unrecognized_sysvar.fail.rs
use codama_macros::codama;

#[codama(default_value = sysvar("banana"))]
pub struct Test;

fn main() {}
